--- a/modbus.yaml
+++ b/modbus.yaml
@@ -11,6 +11,7 @@
       scan_interval: 10
       slave: 3
       address: 8
+      scale: 0.1
       input_type: input
       max_temp: 62
       min_temp: 5
